--- a/templates/user_top.html
+++ b/templates/user_top.html
@@ -356,7 +356,7 @@
       </li>
       <li class="right">
         <a
-          href="terms_of_service.html"
+          href="{{url_for('terms_of_service')}}"
           style="border-left: 2px solid white; padding: 2px 8px"
           ><h2>利用規約</h2></a
         >
@@ -756,7 +756,7 @@
       <ul class="menu">
         <li><a href="#">ホーム</a></li>
         <li>
-          <a href="about_the_site.html"
+          <a href="{{url_for('about_the_site')}}"
             >MUSIC REEF(ミュージックリーフ)について</a
           >
         </li>
