・tag.htmlに戻るボタンを追加 ・music.htmlのタグのcssを修正 ・scriptで誤字があったため修正を加えた

--- a/templates/music_edit.html
+++ b/templates/music_edit.html
@@ -157,7 +157,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>感情</b><br />
@@ -166,7 +166,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>楽器</b><br />
@@ -175,7 +175,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>用途</b><br />
@@ -184,7 +184,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <button type="submit">編集</button><br /><br /><br />
