--- a/templates/tag.html
+++ b/templates/tag.html
@@ -16,6 +16,8 @@
       ><br />
       タグ名<input type="text" name="tag_name" /><br />
       <button type="submit">登録</button>
+      <br>
+      <a href="{{url_for('music_register')}}">戻る</a>
     </form>
   </body>
 </html>
